# dynamic-form-builder

./: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vercel.json
.cursor/agents/: impact-analyst.md  implementer.md  requirements-agent.md  scope-analyst.md  sdlc-orchestrator.md  ship-agent.md  test-agent.md
.cursor/rules/: code-quality.mdc  coding-principles.mdc  javascript-typescript.mdc  monorepo.mdc  python-fastapi.mdc  sdlc-routing.mdc
api/: index.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  fields.py  forms.py  public.py  responses.py
backend/app/core/: config.py  constants.py  database.py  deps.py  exceptions.py  rate_limit.py  security.py
backend/app/models/: __init__.py
backend/app/services/: analytics.py  export.py  forms.py
backend/app/utils/: ids.py
backend/scripts/: seed.py
backend/tests/: test_api.py
docs/: README.md  architecture.md
docs/handoffs/: README.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: dev.ps1  migrate-sqlite-to-pg.py
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/db/: client.ts  migrate.ts  schema.ts  seed.ts
src/hooks/: use-debounce.ts
src/lib/: analytics.ts  auth.ts  forms.server.ts  public-tokens.ts  slug.ts  (+2 more)
(+167 files in other folders)
